<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.group01</groupId>
    <artifactId>clinic-appointment-system</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Clinic Appointment</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.5.14</spring-boot.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
    </properties>

    <modules>
        <module>services/user-service</module>
        <module>services/patient-service</module>
        <module>services/doctor-service</module>
        <module>services/notification-service</module>
        <module>services/appointment-service</module>
        <module>infra/api-gateway</module>
        <module>infra/config-server</module>
        <module>infra/eureka-server</module>
        <module>shared/common-events</module>
        <module>shared/common-security</module>
        <module>shared/common-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.46</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                <version>5.0.1</version>
                <scope>compile</scope>
            </dependency>

<!--            <dependency>-->
<!--                <groupId>com.talenthub</groupId>-->
<!--                <artifactId>common-web</artifactId>-->
<!--                <version>${project.version}</version>-->
<!--            </dependency>-->

<!--            <dependency>-->
<!--                <groupId>org.postgresql</groupId>-->
<!--                <artifactId>postgresql</artifactId>-->
<!--                <version>42.7.7</version>-->
<!--            </dependency>-->
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>

